compiler/tests/checks/recursive_types.out
compiler/tests/checks/recursive_types.foxil:1:1: error: recursion detected in field 1 of type `@Recursive`
     1 | @Recursive = type {
       | ^^^^^^^^^^
       = help: use a pointer instead
